deployment/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 8000

---
# cv_service 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cv-service
  template:
    metadata:
      labels:
        app: cv-service
    spec:
      containers:
        - name: cv-service
          image: cv-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: cv-service
spec:
  selector:
    app: cv-service
  ports:
    - port: 80
      targetPort: 8001
